--- a/example/index.html
+++ b/example/index.html
@@ -14,10 +14,10 @@
 		        <div class="ti_slide">
 		            <div class="ti_content">
 		                <div class="ti_news"><a href="#"><span>11:00</span> US fisherman rescued by tanker after 66 days lost at sea</a></div>
-						<div class="ti_news"><a href="#"><span>12:00</span> Overseas aid must rise by £1bn in next two years, says Europe</a></div>
-						<div class="ti_news"><a href="#"><span>13:00</span> Muslim population looks likely to double in size </a></div>
-						<div class="ti_news"><a href="#"><span>15:00</span> Heathrow cuts passenger levy to boost domestic flights</a></div>
-						<div class="ti_news"><a href="#"><span>16:00</span> Couple plotted to sell their new baby online for €5,000 </a></div>
+						<div class="ti_news"><a href="#">12:00 Overseas aid must rise by £1bn in next two years, says Europe</a></div>
+						<div class="ti_news"><a href="#">13:00 Muslim population looks likely to double in size </a></div>
+						<div class="ti_news"><a href="#">15:00 Heathrow cuts passenger levy to boost domestic flights</a></div>
+						<div class="ti_news"><a href="#">16:00 Couple plotted to sell their new baby online for €5,000 </a></div>
 		            </div>
 		        </div>
 		    </div>
@@ -26,11 +26,11 @@
 		    <div class="ti_wrapper">
 		        <div class="ti_slide">
 		            <div class="ti_content">
-		                <div class="ti_news"><a href="#"><span>11:00</span> US fisherman rescued by tanker after 66 days lost at sea</a></div>
-						<div class="ti_news"><a href="#"><span>12:00</span> Overseas aid must rise by £1bn in next two years, says Europe</a></div>
-						<div class="ti_news"><a href="#"><span>13:00</span> Muslim population looks likely to double in size </a></div>
-						<div class="ti_news"><a href="#"><span>15:00</span> Heathrow cuts passenger levy to boost domestic flights</a></div>
-						<div class="ti_news"><a href="#"><span>16:00</span> Couple plotted to sell their new baby online for €5,000 </a></div>
+		                <div class="ti_news"><a href="#">11:00 US fisherman rescued by tanker after 66 days lost at sea</a></div>
+						<div class="ti_news"><a href="#">12:00 Overseas aid must rise by £1bn in next two years, says Europe</a></div>
+						<div class="ti_news"><a href="#">13:00 Muslim population looks likely to double in size </a></div>
+						<div class="ti_news"><a href="#">15:00 Heathrow cuts passenger levy to boost domestic flights</a></div>
+						<div class="ti_news"><a href="#">16:00 Couple plotted to sell their new baby online for €5,000 </a></div>
 		            </div>
 		        </div>
 		    </div>
